Re-organize src code to enable IDE build
Change-Id: I1ee54ef19919b57372c1f9e9ca235ce345e768e1
Signed-off-by: Prakash <prakashc.p@samsung.com>

--- a/res/po/gu.po
+++ b/res/po/gu.po
@@ -47,7 +47,7 @@ msgid "IDS_TPLATFORM_ACBUTTON_DONE_ABB"
 msgstr "पूर्ण"
 
 msgid "IDS_TPLATFORM_ACBUTTON_CANCEL_ABB"
-msgstr "रद्द करें
+msgstr "रद्द करें"
 
 msgid "IDS_CHATON_POP_MAXIMUM_FILE_SIZE_HPD_MB_EXCEEDED"
 msgstr "મહત્તમ ફાઇલ કદ (%d MB) વટાવ્યું."
