Resolved TSAM-1834 & TSAM-1835 with added support of po files
Change-Id: Ifba7aec50ad4a0a19221f377ddaed55f52dc6f1b
Signed-off-by: bhutani.92 <bhutani.92@samsung.com>

--- a/res/po/az.po
+++ b/res/po/az.po
@@ -55,3 +55,12 @@ msgstr "Fayl ölçüsü (%d MB) maksimumu keçib."
 msgid "IDS_IM_POP_MAXIMUM_SIZE_OF_FILES_EXCEEDED"
 msgstr "Faylların maksimum sayını keçib."
 
+msgid "IDS_COM_BODY_SEARCH"
+msgstr "Axtarış"
+
+msgid "IDS_COM_POP_PROCESSING"
+msgstr "Emal edilir..."
+
+msgid "IDS_COM_BODY_SEARCHING"
+msgstr "Axtarılır"
+
