--- a/res/po/es_US.po
+++ b/res/po/es_US.po
@@ -55,3 +55,12 @@ msgstr "Se alcanzó el tamaño máximo del archivo (%d MB)."
 msgid "IDS_IM_POP_MAXIMUM_SIZE_OF_FILES_EXCEEDED"
 msgstr "Tamaño máximo de archivos superado."
 
+msgid "IDS_COM_BODY_SEARCH"
+msgstr "Buscar"
+
+msgid "IDS_COM_POP_PROCESSING"
+msgstr "Procesando..."
+
+msgid "IDS_COM_BODY_SEARCHING"
+msgstr "Buscando"
+
