--- a/res/po/hr.po
+++ b/res/po/hr.po
@@ -55,3 +55,12 @@ msgstr "Premašena maksimalna veličina datoteke (%d MB)."
 msgid "IDS_IM_POP_MAXIMUM_SIZE_OF_FILES_EXCEEDED"
 msgstr "Maks. veličina datoteke."
 
+msgid "IDS_COM_BODY_SEARCH"
+msgstr "Traži"
+
+msgid "IDS_COM_POP_PROCESSING"
+msgstr "Procesiranje..."
+
+msgid "IDS_COM_BODY_SEARCHING"
+msgstr "Traženje"
+
