--- a/res/po/pa.po
+++ b/res/po/pa.po
@@ -55,3 +55,12 @@ msgstr "ਅਧਿਕਤਮ ਫਾਈਲ ਆਕਾਰ (%d MB) ਵਧਾਇਆ ਗ
 msgid "IDS_IM_POP_MAXIMUM_SIZE_OF_FILES_EXCEEDED"
 msgstr "ਫਾਇਲਾਂ ਦਾ ਅਧਿਕਤਮ ਆਕਾਰ ਜ਼ਿਆਦਾ ਹੋ ਗਿਆ ਹੈ।"
 
+msgid "IDS_COM_BODY_SEARCH"
+msgstr "ਖੋਜੋ"
+
+msgid "IDS_COM_POP_PROCESSING"
+msgstr "ਪ੍ਰਕਿਰਿਆ ਹੋ ਰਹੀ ਹੈ..."
+
+msgid "IDS_COM_BODY_SEARCHING"
+msgstr "ਖੋਜਿਆ ਜਾ ਰਿਹਾ ਹੈ"
+
