[ug-myfiles-efl]Added strings in PO file
Change-Id: Id369333ce9aab7fac58b3344f57a210ce52f83c8
Signed-off-by: Shubham Kumar <shubham.srib@samsung.com>

--- a/res/po/ca.po
+++ b/res/po/ca.po
@@ -28,6 +28,9 @@ msgstr "Caràcter introduït no vàlid. Torni-ho a intentar."
 msgid "IDS_ST_BODY_PHONEPROFILES_SILENT"
 msgstr "Silenci"
 
+msgid "IDS_COM_BODY_PD_SELECTED"
+msgstr "%d seleccionat"
+
 msgid "IDS_IV_POP_YOU_CAN_SELECT_UP_TO_PD_ITEMS"
 msgstr "Pot seleccionar fins a %d elements"
 
@@ -54,13 +57,6 @@ msgstr "S'ha excedit la mida màxima de fitxer (%d MB)"
 
 msgid "IDS_IM_POP_MAXIMUM_SIZE_OF_FILES_EXCEEDED"
 msgstr "S'ha excedit la mida màxima de fitxers"
-
-msgid "IDS_COM_BODY_SEARCH"
-msgstr "Cercar"
-
-msgid "IDS_COM_POP_PROCESSING"
-msgstr "Processant..."
-
-msgid "IDS_COM_BODY_SEARCHING"
-msgstr "S'està cercant"
+msgid "IDS_COM_OPT_IMPORT"
+msgstr "Importar"
 
