--- a/res/po/ja_JP.po
+++ b/res/po/ja_JP.po
@@ -28,6 +28,9 @@ msgstr "無効な文字が入力されました。再度実行してください
 msgid "IDS_ST_BODY_PHONEPROFILES_SILENT"
 msgstr "サイレント"
 
+msgid "IDS_COM_BODY_PD_SELECTED"
+msgstr "%d件選択"
+
 msgid "IDS_IV_POP_YOU_CAN_SELECT_UP_TO_PD_ITEMS"
 msgstr "%dアイテムまで選択できます。"
 
@@ -54,13 +57,6 @@ msgstr "最大ファイルサイズ(%dMB)を超えました。"
 
 msgid "IDS_IM_POP_MAXIMUM_SIZE_OF_FILES_EXCEEDED"
 msgstr "ファイルの最大サイズを超えました。"
-
-msgid "IDS_COM_BODY_SEARCH"
-msgstr "検索"
-
-msgid "IDS_COM_POP_PROCESSING"
-msgstr "処理中..."
-
-msgid "IDS_COM_BODY_SEARCHING"
-msgstr "検索しています。"
+msgid "IDS_COM_OPT_IMPORT"
+msgstr "インポート"
 
