--- a/res/po/pa.po
+++ b/res/po/pa.po
@@ -23,10 +23,13 @@ msgid "IDS_MF_HEADER_SELECT_ITEMS"
 msgstr "ਆਈਟਮਸ ਚੁਣੋ"
 
 msgid "IDS_VR_POP_INVALID_CHARACTER_ENTERED_TRY_AGAIN"
-msgstr "ਅਵੈਧ ਵਰਣ ਦਾਖ਼ਲ ਹੋਇਆ। ਦੁਬਾਰਾ ਕੋਸ਼ਿਸ਼ ਕਰੋ।"
+msgstr "ਅਵੈਧ ਵਰਣ ਦਾਖ਼ਲ ਹੋਇਆ। ਫਿਰ ਕੋਸ਼ਿਸ਼ ਕਰੋ।"
 
 msgid "IDS_ST_BODY_PHONEPROFILES_SILENT"
 msgstr "ਸ਼ਾਂਤ"
+
+msgid "IDS_COM_BODY_PD_SELECTED"
+msgstr "%d ਚੁਣੇ।"
 
 msgid "IDS_IV_POP_YOU_CAN_SELECT_UP_TO_PD_ITEMS"
 msgstr "ਤੁਸੀਂ %d ਤੱਕ ਆਈਟਮਸ ਚੁਣ ਸਕਦੇ ਹੋ।"
@@ -54,13 +57,6 @@ msgstr "ਅਧਿਕਤਮ ਫਾਈਲ ਆਕਾਰ (%d MB) ਵਧਾਇਆ ਗ
 
 msgid "IDS_IM_POP_MAXIMUM_SIZE_OF_FILES_EXCEEDED"
 msgstr "ਫਾਇਲਾਂ ਦਾ ਅਧਿਕਤਮ ਆਕਾਰ ਜ਼ਿਆਦਾ ਹੋ ਗਿਆ ਹੈ।"
-
-msgid "IDS_COM_BODY_SEARCH"
-msgstr "ਖੋਜੋ"
-
-msgid "IDS_COM_POP_PROCESSING"
-msgstr "ਪ੍ਰਕਿਰਿਆ ਹੋ ਰਹੀ ਹੈ..."
-
-msgid "IDS_COM_BODY_SEARCHING"
-msgstr "ਖੋਜਿਆ ਜਾ ਰਿਹਾ ਹੈ"
+msgid "IDS_COM_OPT_IMPORT"
+msgstr "ਆਯਾਤ ਕਰੋ"
 
