--- a/res/po/uk.po
+++ b/res/po/uk.po
@@ -28,6 +28,9 @@ msgstr "Введено хибний символ. Cпробуйте ще раз"
 msgid "IDS_ST_BODY_PHONEPROFILES_SILENT"
 msgstr "Без звуку"
 
+msgid "IDS_COM_BODY_PD_SELECTED"
+msgstr "Вибрано %d"
+
 msgid "IDS_IV_POP_YOU_CAN_SELECT_UP_TO_PD_ITEMS"
 msgstr "Можна вибрати до %d об’єктів."
 
@@ -54,13 +57,6 @@ msgstr "Перевищено максимальний розмір файла (%
 
 msgid "IDS_IM_POP_MAXIMUM_SIZE_OF_FILES_EXCEEDED"
 msgstr "Перевищено максимальний розмір файлів."
-
-msgid "IDS_COM_BODY_SEARCH"
-msgstr "Пошук"
-
-msgid "IDS_COM_POP_PROCESSING"
-msgstr "Обробка..."
-
-msgid "IDS_COM_BODY_SEARCHING"
-msgstr "Пошук"
+msgid "IDS_COM_OPT_IMPORT"
+msgstr "Імпортувати"
 
