--- a/res/po/zh_TW.po
+++ b/res/po/zh_TW.po
@@ -1,5 +1,5 @@
 msgid "IDS_MF_POP_ERR_FOLDER_NAME_EMPTY"
-msgstr "輸入資料夾名稱。"
+msgstr "輸入資料夾名稱"
 
 msgid "IDS_MF_BODY_DOCUMENTS"
 msgstr "文件"
@@ -28,6 +28,9 @@ msgstr "輸入的字元無效。請重試。"
 msgid "IDS_ST_BODY_PHONEPROFILES_SILENT"
 msgstr "靜音"
 
+msgid "IDS_COM_BODY_PD_SELECTED"
+msgstr "%d 已選擇"
+
 msgid "IDS_IV_POP_YOU_CAN_SELECT_UP_TO_PD_ITEMS"
 msgstr "最多可以選擇 %d 個項目。"
 
@@ -54,13 +57,6 @@ msgstr "已超過檔案最大上限 (%d MB)。"
 
 msgid "IDS_IM_POP_MAXIMUM_SIZE_OF_FILES_EXCEEDED"
 msgstr "檔案最大的大小已超過。"
-
-msgid "IDS_COM_BODY_SEARCH"
-msgstr "搜尋"
-
-msgid "IDS_COM_POP_PROCESSING"
-msgstr "正在處理..."
-
-msgid "IDS_COM_BODY_SEARCHING"
-msgstr "正在搜尋"
+msgid "IDS_COM_OPT_IMPORT"
+msgstr "匯入"
 
