--- a/res/po/pl.po
+++ b/res/po/pl.po
@@ -28,6 +28,9 @@ msgstr "Wpisano nieprawidłowy znak. Spróbuj ponownie"
 msgid "IDS_ST_BODY_PHONEPROFILES_SILENT"
 msgstr "Cichy"
 
+msgid "IDS_COM_BODY_PD_SELECTED"
+msgstr "Wybrano %d"
+
 msgid "IDS_IV_POP_YOU_CAN_SELECT_UP_TO_PD_ITEMS"
 msgstr "Maksymalna liczba elementów, które można wybrać: %d."
 
@@ -54,4 +57,6 @@ msgstr "Przekroczono maksymalny rozmiar pliku (%d MB)."
 
 msgid "IDS_IM_POP_MAXIMUM_SIZE_OF_FILES_EXCEEDED"
 msgstr "Przekroczono maksymalny rozmiar plików."
+msgid "IDS_COM_OPT_IMPORT"
+msgstr "Importuj"
 
