--- a/res/po/pt_BR.po
+++ b/res/po/pt_BR.po
@@ -28,6 +28,9 @@ msgstr "Caractere inválido inserido. Tente novamente"
 msgid "IDS_ST_BODY_PHONEPROFILES_SILENT"
 msgstr "Silencioso"
 
+msgid "IDS_COM_BODY_PD_SELECTED"
+msgstr "%d selecionado(s)"
+
 msgid "IDS_IV_POP_YOU_CAN_SELECT_UP_TO_PD_ITEMS"
 msgstr "Você pode selecionar até %d itens."
 
@@ -54,4 +57,6 @@ msgstr "Tamanho máximo do arquivo (%d MB) excedido."
 
 msgid "IDS_IM_POP_MAXIMUM_SIZE_OF_FILES_EXCEEDED"
 msgstr "Tamanho máximo dos arquivos excedido."
+msgid "IDS_COM_OPT_IMPORT"
+msgstr "Importar"
 
