--- a/res/po/az.po
+++ b/res/po/az.po
@@ -28,6 +28,9 @@ msgstr "Səhv simvol daxil edilib. Təkrar cəhd et"
 msgid "IDS_ST_BODY_PHONEPROFILES_SILENT"
 msgstr "Səssiz"
 
+msgid "IDS_COM_BODY_PD_SELECTED"
+msgstr "%d seçilmişdir"
+
 msgid "IDS_IV_POP_YOU_CAN_SELECT_UP_TO_PD_ITEMS"
 msgstr "Siz maksimum %d element seçə bilərsiniz."
 
@@ -54,4 +57,6 @@ msgstr "Fayl ölçüsü (%d MB) maksimumu keçib."
 
 msgid "IDS_IM_POP_MAXIMUM_SIZE_OF_FILES_EXCEEDED"
 msgstr "Faylların maksimum sayını keçib."
+msgid "IDS_COM_OPT_IMPORT"
+msgstr "Gətir"
 
