--- a/res/po/eu.po
+++ b/res/po/eu.po
@@ -28,6 +28,9 @@ msgstr "Karaktere baliogabea adierazi dituzu. Saiatu berriz."
 msgid "IDS_ST_BODY_PHONEPROFILES_SILENT"
 msgstr "Isila"
 
+msgid "IDS_COM_BODY_PD_SELECTED"
+msgstr "%d aukeratuta"
+
 msgid "IDS_IV_POP_YOU_CAN_SELECT_UP_TO_PD_ITEMS"
 msgstr "%d elementu arte aukera ditzakezu"
 
@@ -54,4 +57,6 @@ msgstr "Fitxategiaren gehieneko neurria (%d MB) gaindituta"
 
 msgid "IDS_IM_POP_MAXIMUM_SIZE_OF_FILES_EXCEEDED"
 msgstr "Fitxategien gehienezko neurria gaindituta"
+msgid "IDS_COM_OPT_IMPORT"
+msgstr "Inportatu"
 
