--- a/res/po/ga.po
+++ b/res/po/ga.po
@@ -28,6 +28,9 @@ msgstr "Carachtar neamhbhailí iontráilte. Triail arís."
 msgid "IDS_ST_BODY_PHONEPROFILES_SILENT"
 msgstr "Tostach"
 
+msgid "IDS_COM_BODY_PD_SELECTED"
+msgstr "%d roghnaithe"
+
 msgid "IDS_IV_POP_YOU_CAN_SELECT_UP_TO_PD_ITEMS"
 msgstr "Is féidir leat suas le %d mír a roghnú"
 
@@ -54,4 +57,6 @@ msgstr "Uasmhéid an chomhaid (%d MB) sáraithe."
 
 msgid "IDS_IM_POP_MAXIMUM_SIZE_OF_FILES_EXCEEDED"
 msgstr "Uasmhéid na gcomhad sáraithe."
+msgid "IDS_COM_OPT_IMPORT"
+msgstr "Iompórtáil"
 
