--- a/res/po/is.po
+++ b/res/po/is.po
@@ -28,6 +28,9 @@ msgstr "Ógildur stafur sleginn inn. Reyndu aftur."
 msgid "IDS_ST_BODY_PHONEPROFILES_SILENT"
 msgstr "Án hljóðs"
 
+msgid "IDS_COM_BODY_PD_SELECTED"
+msgstr "%d valið"
+
 msgid "IDS_IV_POP_YOU_CAN_SELECT_UP_TO_PD_ITEMS"
 msgstr "Hægt er velja allt að %d hluti."
 
@@ -54,4 +57,6 @@ msgstr "Hámarksstærð skráar (%d MB) hefur verið náð."
 
 msgid "IDS_IM_POP_MAXIMUM_SIZE_OF_FILES_EXCEEDED"
 msgstr "Hámarksstærð skráa er náð."
+msgid "IDS_COM_OPT_IMPORT"
+msgstr "Flytja inn"
 
