--- a/res/po/nb.po
+++ b/res/po/nb.po
@@ -28,6 +28,9 @@ msgstr "Ugyldig tegn angitt. Prøv på nytt."
 msgid "IDS_ST_BODY_PHONEPROFILES_SILENT"
 msgstr "Stille"
 
+msgid "IDS_COM_BODY_PD_SELECTED"
+msgstr "%d valgt"
+
 msgid "IDS_IV_POP_YOU_CAN_SELECT_UP_TO_PD_ITEMS"
 msgstr "Du kan velge opptil %d elementer."
 
@@ -54,4 +57,6 @@ msgstr "Maksimal filstørrelse (%d MB) overskredet."
 
 msgid "IDS_IM_POP_MAXIMUM_SIZE_OF_FILES_EXCEEDED"
 msgstr "Maksimal filstørrelse oversteget."
+msgid "IDS_COM_OPT_IMPORT"
+msgstr "Importer"
 
