--- a/res/po/sr.po
+++ b/res/po/sr.po
@@ -28,6 +28,9 @@ msgstr "Unet je neispravan karakter. Pokušaj ponovo"
 msgid "IDS_ST_BODY_PHONEPROFILES_SILENT"
 msgstr "Nečujno"
 
+msgid "IDS_COM_BODY_PD_SELECTED"
+msgstr "Izabrano %d"
+
 msgid "IDS_IV_POP_YOU_CAN_SELECT_UP_TO_PD_ITEMS"
 msgstr "Možete izabrati do %d stavki."
 
@@ -54,4 +57,6 @@ msgstr "Premašena je maksimalna veličina fajla (%d MB)."
 
 msgid "IDS_IM_POP_MAXIMUM_SIZE_OF_FILES_EXCEEDED"
 msgstr "Pređena maksimalna veličina fajlova."
+msgid "IDS_COM_OPT_IMPORT"
+msgstr "Uvezi"
 
