--- a/res/po/zh_HK.po
+++ b/res/po/zh_HK.po
@@ -28,6 +28,9 @@ msgstr "輸入的字元無效。請重試。"
 msgid "IDS_ST_BODY_PHONEPROFILES_SILENT"
 msgstr "靜音"
 
+msgid "IDS_COM_BODY_PD_SELECTED"
+msgstr "%d 已選擇"
+
 msgid "IDS_IV_POP_YOU_CAN_SELECT_UP_TO_PD_ITEMS"
 msgstr "最多可選擇 %d 個項目。"
 
@@ -54,4 +57,6 @@ msgstr "已超過檔案大小上限 (%d MB)。"
 
 msgid "IDS_IM_POP_MAXIMUM_SIZE_OF_FILES_EXCEEDED"
 msgstr "超出檔案大小上限。"
+msgid "IDS_COM_OPT_IMPORT"
+msgstr "匯入"
 
